# googledoc-revision-tracker

./: .env.example  .gitignore  README.md  doc_sync.py  documents.yaml.example  drive_revisions.py  main.py  pyproject.toml
